tests/errors/test_42.x
// Duplicate keys in enum

enum Letters -> { A, A, B }

fn main() -> void {

}